[gd_scene load_steps=26 format=3 uid="uid://blea2gg8sfq77"]

[ext_resource type="Texture2D" uid="uid://d15t14idww00o" path="res://assets/new background yessir.png" id="1_o7lwj"]
[ext_resource type="Script" path="res://scripts/player.gd" id="2_2mmbc"]
[ext_resource type="PackedScene" uid="uid://djvoqyul6vtl3" path="res://scenes/overlay.tscn" id="3_2ipbq"]
[ext_resource type="PackedScene" uid="uid://ye8thihf6typ" path="res://scenes/flashyflash.tscn" id="3_7jt8k"]
[ext_resource type="Script" path="res://scripts/flashyflash_but_canvaslayer.gd" id="3_fvtr4"]
[ext_resource type="Script" path="res://scripts/health_manager.gd" id="5_3hgnr"]
[ext_resource type="Texture2D" uid="uid://b6tsyxpy8arvr" path="res://assets/Dayvon Daprawn Bennett.png" id="5_4fdh7"]
[ext_resource type="Texture2D" uid="uid://behkc6y0k8yo6" path="res://assets/got a glock wit a ruler clip.png" id="5_j4o6i"]
[ext_resource type="Script" path="res://scripts/death_manager.gd" id="6_jsb6b"]
[ext_resource type="Script" path="res://player_state_manager.gd" id="7_gawbx"]
[ext_resource type="Texture2D" uid="uid://ba01cjsx85y5m" path="res://assets/soy sauce.png" id="7_vq0yb"]
[ext_resource type="Script" path="res://scripts/pocket_msg_manager.gd" id="9_3x0cf"]
[ext_resource type="Script" path="res://scripts/kill_manager.gd" id="12_skmim"]
[ext_resource type="Script" path="res://scripts/soy_sauce_guzzling_manager.gd" id="13_4m1y3"]
[ext_resource type="Script" path="res://scripts/wave_manager.gd" id="13_o54qq"]
[ext_resource type="Script" path="res://scripts/timekeeper.gd" id="14_8x3vt"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_xtgva"]
particle_flag_disable_z = true
angle_min = -180.0
angle_max = 180.0
spread = 180.0
initial_velocity_min = 500.0
initial_velocity_max = 500.0
gravity = Vector3(0, 0, 0)
linear_accel_min = -400.0
linear_accel_max = -50.0
damping_min = 9.14
damping_max = 9.14
scale_min = 0.0
scale_max = 50.0
scale_over_velocity_min = 360.22
scale_over_velocity_max = 360.22

[sub_resource type="RectangleShape2D" id="RectangleShape2D_niv36"]
size = Vector2(67, 52.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_pypen"]
radius = 58.0775

[sub_resource type="Animation" id="Animation_bntka"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("KnifePivot/Knife:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("KnifePivot/Knife/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/Sprite2D/SoySauce/ILoveSoylent:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/Sprite2D/SoySauce/ILoveSoylent:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-7.99999, -2)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/Sprite2D/SoySauce/ILoveSoylent:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.15, 0.15)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CanvasLayer/Sprite2D/SoySauce/ILoveSoylent:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.23918]
}

[sub_resource type="Animation" id="Animation_ydrjf"]
resource_name = "attack"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("KnifePivot/Knife:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.233333, 0.433333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.732651, 0.984977, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("KnifePivot/Knife/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.233333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_clai4"]
resource_name = "death"
length = 0.1
loop_mode = 1

[sub_resource type="Animation" id="Animation_a7spi"]
resource_name = "drink"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Sprite2D/SoySauce/ILoveSoylent:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Sprite2D/SoySauce/ILoveSoylent:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 0.266667, 0.566667, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-7.99999, -2), Vector2(-113, -16), Vector2(-113, -16), Vector2(-110, -83)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/Sprite2D/SoySauce/ILoveSoylent:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0333333, 0.266667, 0.666667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.15, 0.15), Vector2(0.25, 0.25), Vector2(0.25, 0.25), Vector2(1e-05, 1e-05)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/Sprite2D/SoySauce/ILoveSoylent:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.566667, 0.666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.23918, 1.59349]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8a5nn"]
_data = {
"RESET": SubResource("Animation_bntka"),
"attack": SubResource("Animation_ydrjf"),
"death": SubResource("Animation_clai4"),
"drink": SubResource("Animation_a7spi")
}

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_uli3x"]
normal = Vector2(-0.0174954, 0.999847)

[node name="Root" type="Node2D"]

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_o7lwj")

[node name="Player" type="CharacterBody2D" parent="."]
script = ExtResource("2_2mmbc")

[node name="CanvasLayer" type="CanvasLayer" parent="Player"]
follow_viewport_enabled = true
script = ExtResource("3_fvtr4")

[node name="CanvasLayer" type="CanvasLayer" parent="Player/CanvasLayer"]
layer = 0

[node name="Overlay" parent="Player/CanvasLayer/CanvasLayer" instance=ExtResource("3_2ipbq")]

[node name="Control" parent="Player/CanvasLayer/CanvasLayer" instance=ExtResource("3_7jt8k")]
visible = false

[node name="Sprite2D" type="Sprite2D" parent="Player/CanvasLayer"]
scale = Vector2(0.1, 0.1)
texture = ExtResource("5_4fdh7")

[node name="SoySauce" type="Node2D" parent="Player/CanvasLayer/Sprite2D"]
scale = Vector2(10, 10)

[node name="ILoveSoylent" type="Sprite2D" parent="Player/CanvasLayer/Sprite2D/SoySauce"]
visible = false
position = Vector2(-7.99999, -2)
rotation = 1.23918
scale = Vector2(0.15, 0.15)
texture = ExtResource("7_vq0yb")

[node name="GPUParticles2D" type="GPUParticles2D" parent="Player/CanvasLayer"]
modulate = Color(0, 0, 0, 1)
emitting = false
amount = 67
process_material = SubResource("ParticleProcessMaterial_xtgva")
one_shot = true
explosiveness = 0.9

[node name="KnifePivot" type="Node2D" parent="Player"]

[node name="Knife" type="Area2D" parent="Player/KnifePivot"]
collision_mask = 2

[node name="Sprite2D" type="Sprite2D" parent="Player/KnifePivot/Knife"]
scale = Vector2(0.25, 0.25)
texture = ExtResource("5_j4o6i")
offset = Vector2(400, 0)
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/KnifePivot/Knife"]
position = Vector2(125, 8)
shape = SubResource("RectangleShape2D_niv36")
disabled = true

[node name="PhysicalCollision" type="CollisionShape2D" parent="Player"]
shape = SubResource("CircleShape2D_pypen")

[node name="HealthManager" type="Node" parent="Player"]
script = ExtResource("5_3hgnr")
hp = 5.0
max_hp = 5.0

[node name="DeathManager" type="Node" parent="Player"]
script = ExtResource("6_jsb6b")

[node name="PlayerStateManager" type="Node" parent="Player"]
script = ExtResource("7_gawbx")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
libraries = {
"": SubResource("AnimationLibrary_8a5nn")
}

[node name="PocketMSGManager" type="Node2D" parent="Player"]
script = ExtResource("9_3x0cf")

[node name="SoySauceGuzzlingManager" type="Node" parent="Player"]
script = ExtResource("13_4m1y3")

[node name="KillManager" type="Node" parent="."]
script = ExtResource("12_skmim")

[node name="WaveManager" type="Node" parent="."]
script = ExtResource("13_o54qq")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="boundaries" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="boundaries"]
position = Vector2(-10, 500)
shape = SubResource("WorldBoundaryShape2D_uli3x")
one_way_collision = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="boundaries"]
position = Vector2(-5, -498)
rotation = -3.1321
shape = SubResource("WorldBoundaryShape2D_uli3x")
one_way_collision = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="boundaries"]
position = Vector2(-907, -2)
rotation = 1.58943
shape = SubResource("WorldBoundaryShape2D_uli3x")
one_way_collision = true

[node name="CollisionShape2D4" type="CollisionShape2D" parent="boundaries"]
position = Vector2(898, 2)
rotation = 1.5533
shape = SubResource("WorldBoundaryShape2D_uli3x")
one_way_collision = true

[node name="SpawnPoint1" type="Node2D" parent="."]
position = Vector2(1135, 0)

[node name="SpawnPoint2" type="Node2D" parent="."]
position = Vector2(-1136, 0)

[node name="SpawnPoint3" type="Node2D" parent="."]
position = Vector2(-4, 652)

[node name="SpawnPoint4" type="Node2D" parent="."]
position = Vector2(-4, -676)

[node name="Timekeeper" type="Node" parent="."]
script = ExtResource("14_8x3vt")

[node name="GameStateManager" type="Node" parent="."]

[connection signal="body_entered" from="Player/KnifePivot/Knife" to="Player" method="_on_knife_body_entered"]
